<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Комерсантъ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="now">Сегодня:</string>
    <string name="date">27-</string>
    <string name="day">Четверг</string>

    <color name="day_color">#FF00FF</color>

    <string name="account_score_text">У Вас на счету:</string>
    <string name="acount_score">43657</string>
    <string name="score_value">Гроблей</string>
    <string name="debt">0</string>
    <string name="kredit_text">Вы должны:</string>
    <string name="kredit">0</string>
    <string name="debt_text">Вам должны:</string>
    <string name="profit">137</string>
    <string name="profit_text">Итого прибыль:</string>
    <string name="kredit_proc_text">Процент под кредит:</string>
    <string name="kredit_proc">6%</string>
    <string name="debt_proc_text">Процент под долг:</string>
    <string name="debt_proc">9%</string>
    <string name="incom_tax_text">Подоходный налог:</string>
    <string name="income_tax">2%</string>
    <string name="rent_house_text">Плата за дом:</string>
    <string name="rent_house">21%</string>
    <string name="rent_land_text">Плата за землю:</string>
    <string name="rent_land">2%</string>

    <color name="spinner_color">#AAAAAA</color>
    <color name="bakc">#0000FF</color>
    <color name="text_color">#EDD721</color>

    <string name="month">Jan-</string>
    <string name="year">2000</string>
    <string name="quit">Выход</string>
    <string name="about">Версия</string>
    <string name="luaz">ЛуАЗ-969</string>
    <string name="moskvitch">Москвич-412</string>
    <string name="moskvitch2">Москвич-2141</string>
    <string name="vaz6">ВАЗ-2106</string>
    <string name="vaz9">ВАЗ-2109</string>
    <string name="gaz24">ГАЗ-24</string>
    <string name="gaz3102">ГАЗ-3102</string>
    <string name="onek">1-комнатная</string>
    <string name="twok">2-комнатная</string>
    <string name="threek">3-комнатная</string>
    <string name="fourk">4-комнатная</string>
    <string name="fivek">5-комнатная</string>
    <string name="sixk">6-комнатная</string>
    <string name="sevenk">7-комнатная</string>
    <string name="luaz_c">7620</string>
    <string name="moskw_c">23827</string>
    <string name="vaz6_c">30603</string>
    <string name="vaz9_c">44269</string>
    <string name="gaz_c">74879</string>
    <string name="onek_c">8304</string>
    <string name="twok_c">17286</string>
    <string name="threek_c">18934</string>
    <string name="fourk_c">34304</string>
    <string name="fivek_c">34574</string>
    <string name="title_activity_config">Config</string>
    <string name="shop">Магазин</string>
    <string name="havings">Собственность</string>
    <string name="Realty">Недвижимость</string>
    <string name="Car">Транспорт</string>
    <string name="Oil">Нефть</string>
    <string name="Glebe">Земля</string>
    <string name="Sold">Продать</string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
	<string name="Bay">Купить</string>
	<string name="Railto">Биржа</string>
	<string name="Secret">Секретарь</string>
	<string name="Energo">На энергитическую установку в этом месяце понадобится</string>
	<string name="Energo_str"> _ баррелей нефти</string>
	<string name="Birth">Ваш день рождения</string>
	<string name="Birth_str"> __/___</string>
	<string name="Sales">Продано</string>
	<string name="Buyes">Куплено</string>
	<string name="Saldo">Результат</string>
	<string name="Kredit_Bank">Взять кредит под %</string>
	<string name="Depozit_Bank">Взять депозит под %</string>
	<string name="Srok">Срок</string>
	<string name="Bank">Банк</string>
	<string name="splash">splash</string>
	<color name="background">#000000</color>
	
	
</resources>
