<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton2"
        android:layout_below="@+id/radioButton2"
        android:text="@string/twok" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton4"
        android:layout_below="@+id/radioButton4"
        android:text="@string/threek" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton6"
        android:layout_below="@+id/radioButton6"
        android:text="@string/fourk" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton8"
        android:layout_below="@+id/radioButton8"
        android:text="@string/fivek" />

    <RadioButton
        android:id="@+id/radioButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton10"
        android:layout_below="@+id/radioButton10"
        android:text="@string/sixk" />

    <RadioButton
        android:id="@+id/radioButton14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton12"
        android:layout_below="@+id/radioButton12"
        android:text="@string/sevenk" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton1"
        android:layout_below="@+id/radioButton1"
        android:text="@string/moskvitch" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton3"
        android:layout_below="@+id/radioButton3"
        android:text="@string/moskvitch2" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton5"
        android:layout_below="@+id/radioButton5"
        android:text="@string/vaz6" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton7"
        android:layout_below="@+id/radioButton7"
        android:text="@string/vaz9" />

    <RadioButton
        android:id="@+id/radioButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton9"
        android:layout_below="@+id/radioButton9"
        android:text="@string/gaz24" />

    <RadioButton
        android:id="@+id/radioButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioButton11"
        android:layout_below="@+id/radioButton11"
        android:text="@string/gaz3102" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/radioButton11"
        android:text="@string/onek" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/luaz" />

</RelativeLayout>